<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorBg"

    >
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"


        >
        <TextView
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_gravity="top"
            android:textSize="@dimen/_100sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_2sdp"
            android:textColor="@color/colorTriangle"
            android:gravity="left"
            android:layout_marginLeft="@dimen/_20sdp"

            android:text="@string/icon_square"
            android:id="@+id/txtsquare"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:textColor="@color/colorIcons"
            android:gravity="left"
            android:text="@string/icon_star"
            android:id="@+id/txtstar"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginLeft="@dimen/_90sdp"
            android:textColor="@color/colorIcons"
            android:gravity="left"
            android:text="@string/icon_plus"
            android:id="@+id/txtplus"/>
        <TextView
            android:layout_width="@dimen/_450sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_gravity="top"
            android:textSize="@dimen/_100sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_30sdp"
            android:textColor="@color/colorTriangle"
            android:gravity="left"
            android:layout_marginLeft="@dimen/_53sdp"

            android:text="@string/icon_square"
            android:id="@+id/txtsquare2"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="top"
            android:text="@string/icon_userplus"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_30sdp"
            android:gravity="left"
            android:id="@+id/txtUserPlus"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"

            android:textSize="@dimen/_220sdp"
            android:textStyle="bold"
            android:textColor="@color/colorTriangle"
            android:gravity="center"
            android:rotation="90"
            android:text="@string/icon_play"
            android:id="@+id/txt4"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="clip_horizontal"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:textColor="@color/colorGameName"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_150sdp"
            android:text="Game Name"
            android:id="@+id/txtgame"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="bottom"
            android:textSize="@dimen/_220sdp"
            android:textColor="@color/colorTriangle"
            android:gravity="center"
            android:layout_marginTop="@dimen/_150sdp"
            android:rotation="90"
            android:textStyle="bold"
            android:text="@string/icon_play"
            android:id="@+id/txt2"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_alignParentLeft="true"
            android:textSize="@dimen/_40sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:textStyle="bold"
            android:textColor="@color/colorIcons"
            android:gravity="center"
            android:layout_marginTop="@dimen/_200sdp"
            android:layout_marginBottom="@dimen/_150sdp"
            android:text="@string/icon_setting"
            android:id="@+id/txtIconSetting"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left"
            android:layout_alignParentRight="true"
            android:textSize="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_80sdp"
            android:textStyle="bold"
            android:textColor="@color/colorIcons"
            android:gravity="center"
            android:layout_marginTop="@dimen/_200sdp"
            android:layout_marginBottom="@dimen/_150sdp"
            android:text="@string/icon_user"
            android:id="@+id/txtIconUser"/>


        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/icon_play"
            android:id="@+id/txt"

            android:layout_gravity="bottom"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/colorTriangle"
            android:layout_marginTop="@dimen/_250sdp"
            android:textSize="@dimen/_220sdp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:textSize="@dimen/_40sdp"
            android:textStyle="bold"
            android:textColor="@color/colorIcons"
            android:gravity="center"
            android:layout_marginTop="@dimen/_200sdp"
            android:layout_marginBottom="@dimen/_120sdp"

            android:text="@string/icon_playGame"
            android:id="@+id/txtIconPlay"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:textColor="@color/colorMenu"
            android:gravity="center"
            android:layout_marginTop="@dimen/_230sdp"
            android:layout_marginBottom="@dimen/_100sdp"

            android:text="@string/icon_menu"
            android:id="@+id/txtIconMenu"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"

            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:background="#000"
            android:layout_gravity="bottom"
            android:id="@+id/txt5"
            android:text="ADS Space"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_marginBottom="@dimen/_1sdp"
            />
    </FrameLayout>
</FrameLayout>